main_maps.css
/* MAPS */

.mapContainer {
    display: flex;
    flex-direction: row;
    gap: 10%;
    height: auto;
    width: 100%;
    margin-bottom: 10vh;
}

.mapBlock {
    flex: 1;
    height: auto;
    display: flex;
    flex-direction: column;
    position: relative;
}

.mapItem {
    position: relative;
    display: flex;
}

.mapHover {
    position: absolute;
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.66);
    border-radius: 0.75em;
    opacity: 0;
    transition: .3s all;
    -webkit-transition: .3s all;
    -moz-transition: .3s all;
    cursor: pointer;
}

.mapHover:hover {
    opacity: 1;
}

.mapHover p {
    position: absolute;
    font-family: bebasBook;
    font-weight: bolder;
    text-transform: uppercase;
    font-size: larger;
    color: white;
}

.mapImage {
    border: 0.2em solid #4C6627;
    border-radius: 0.75em;
    height: 40vh;
    width: 100%;
    object-fit: cover;
}



.mapPinContainer {
    position: absolute;
    top: 1em;
    right: 1em;
    background-color: white;
    padding: 0.25em;
    display: flex;
    width: fit-content;
    border-radius: 100%;
    border: 0.2em solid #E85C18;
    visibility: hidden;
}

.mapPinImage {
    height: 1.5em;
    width: auto;
}

/* Phone design */
@media only screen and (max-width: 600px) {

    .mapContainer {
        flex-direction: column;
    }

    .mapBlock .subSectionTitle {
        text-align: center;
    }

    .mapPinContainer {
        visibility: visible;
    }
}

/* Large Phone design and portrait tablet */
@media only screen and (min-width: 600px) {

}

/* Landscape tablets */
@media only screen and (min-width: 768px) {

}

/* Laptop and desktop */
@media only screen and (min-width: 992px) {

}

/* Large laptop and desktop */
@media only screen and (min-width: 1200px) {

}

